force-app/main/default/objects/HelpDesk_Case_Category__mdt/HelpDesk_Case_Category__mdt.object-meta.xml
<CustomObject>
    <description>Configuracao dos picklists dependentes de abertura de caso no portal Help Desk.</description>
    <label>HelpDesk Case Category</label>
    <pluralLabel>HelpDesk Case Categories</pluralLabel>
</CustomObject>