force-app/main/default/objects/HelpDesk_Case_Category__mdt/fields/Sistema__c.field-meta.xml
<CustomField>
    <fullName>Sistema__c</fullName>
    <label>Sistema</label>
    <length>80</length>
    <type>Text</type>
</CustomField>