force-app/main/default/objects/HelpDesk_Case_Category__mdt/fields/Subtipo__c.field-meta.xml
<CustomField>
    <fullName>Subtipo__c</fullName>
    <label>Subtipo</label>
    <length>120</length>
    <type>Text</type>
</CustomField>