force-app/main/default/objects/HelpDesk_Case_Category__mdt/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <length>120</length>
    <type>Text</type>
</CustomField>